--- a/manifests/basic/application.yaml
+++ b/manifests/basic/application.yaml
@@ -13,8 +13,6 @@ spec:
     server: https://kubernetes.default.svc
     namespace: demo
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
     syncOptions:
       - CreateNamespace=true
