--- a/manifests/application-basic.yaml
+++ b/manifests/application-basic.yaml
@@ -13,6 +13,6 @@ spec:
     server: https://kubernetes.default.svc
     namespace: demo
   syncPolicy:
-    #automated: {}
+    automated: {}
     syncOptions:
       - CreateNamespace=true
